[tool.poetry]
name = "pyexcel-project"
version = "0.1.0"
description = ""
authors = ["Edmon Sebit <edmontheprogrammer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.1.2"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
